# splitwise-sync

./: .env.example  .gitignore  README.md  pyproject.toml  run_batch.sh
.dvc/: config
.github/workflows/: tests.yml
data/interim/: .gitignore  expenses.pkl.dvc  locations.geojson.dvc
data/processed/: .gitignore  expenses_feedback.pkl.dvc  matched_transactions_locs.pkl.dvc  matched_transactions_locs_with_feedback.pkl.dvc  transactions.pkl.dvc
data/raw/: .gitignore  dump-splitwise.json.dvc  emails.json.dvc  expenses.json.dvc  locations.jsonl.dvc
models/: .gitignore  decision_tree_model.pkl.dvc  model_with_feedback.joblib.gz.dvc
notebooks/: 01 data cleaning.ipynb  01 data joined.ipynb  02 expense prediction.ipynb  03 re-train with user feedack.ipynb
splitwise_sync/: batch.py  config.py  main.py
splitwise_sync/api/: models.py  routes.py
splitwise_sync/cli/: batch.py  category_summary.py  dump.py
splitwise_sync/core/: email_client.py  logging_utils.py  models.py  receipt_parser.py  splitwise_client.py  transaction_store.py
splitwise_sync/email_parser/: email_client.py  receipt_parser.py
splitwise_sync/ml/: cleaning.py  expense_model.py  feature_extractor.py  preprocessing.py
splitwise_sync/splitwise_api/: custom_expense.py  splitwise_client.py
splitwise_sync/utils/: config.py
tests/unit/: email-body.txt  test_category_summary.py  test_models.py  test_receipt_parser.py  test_transaction_store.py
