[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splitwise-sync"
version = "0.1.0"
description = "Automatically sync bank transactions to Splitwise based on email receipts"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "splitwise==3.0.0",
    "python-dotenv==1.0.1",
    "beautifulsoup4==4.13.4",
    "imap_tools==1.10.0"
]

[project.scripts]
splitwise-sync = "splitwise_sync.cli.batch:main"
splitwise-summary = "splitwise_sync.cli.category_summary:main"

[tool.setuptools]
packages = ["splitwise_sync"]

[dependency-groups]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "black==23.11.0",
    "isort==5.12.0",
    "mypy==1.7.0",
    "ruff==0.1.5",
    "pre-commit==3.5.0",
]
ml = [
    "geopandas>=1.0.1",
    "joblib>=1.4.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I"]
